syntax = "proto3";

package com.zuzex.io;
import "google/protobuf/timestamp.proto";

message GrpcIoData {
  string key = 1;
  string value = 3;
}

message GrpcIoKey {
  string key = 1;
}

message GrpcIoResultExecution {
  GrpcResult result = 1;
  string exception = 2;
}

enum GrpcResult {
  RESULT_SUCCESS = 0;
  RESULT_FAIL = 1;
  RESULT_PENDING = 2;
}

message ErrorResponse {
  string code = 1;
  string message = 2;
  google.protobuf.Timestamp time = 3;

}